# bandwidth-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  cloudbuild.yaml  common_use_cases.md  pyproject.toml  requirements.txt  serve.py
.bandwidth/: catalog-info.yaml  component.yaml
.github/workflows/: deploy.yml  test-pr.yml
docs/plans/: 2026-03-27-phase0-express-registration.md  2026-03-27-phase1-mcp-expansion.md  2026-04-02-mcp-server-v2.md
docs/specs/: 2026-03-27-bandwidth-agent-platform-design.md  2026-04-02-mcp-server-v2-design.md
src/: CLAUDE.md  app.py  callbacks.py  config.py  event_store.py  instructions.py  oauth.py  profiles.py  resources.py  server_utils.py  servers.py  tunnel.py  urls.py
src/specs/: AGENTS.md  build.yml  express.yml
src/tools/: CLAUDE.md  callbacks.py  cnam.py  credentials.py  discovery.py  numbers.py  reports.py  voice.py
test/: CLAUDE.md  test_build.py  test_bxml.py  test_callback_tools.py  test_callbacks.py  test_cnam.py  test_config.py  test_credentials.py  test_event_store.py  test_express.py  test_hosted_safety.py  test_instructions.py  test_integration.py  test_numbers.py  test_profiles.py  test_servers.py  test_spec_cache.py  test_urls.py  utils.py
test/fixtures/: express.yml  voice.yml
