[project]
name = "bw-mcp-server"
version = "0.2.0"
description = "Bandwidth MCP Server"
authors = [
    {name = "Bandwidth", email = "dx@bandwidth.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx~=0.28.0",
    "fastmcp~=2.13.0",
    "mcp~=1.23.0",
    "pyyaml~=6.0.0",
    "werkzeug>=3.1.4"
]

[project.scripts]
start = "app:main"

[tool.setuptools]
packages = ["specs", "tools"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
specs = ["*.yml", "*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-httpx>=0.35.0",
]
